reserved/pwc-ds-k8s-yaml-config-reserved/expert-config/labeling-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labeling-ui
  namespace: expert
spec:
  selector:
    matchLabels:
      app: deployment-labeling-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: deployment-labeling-ui
    spec:
      containers:
      - name: labeling-ui
        image: 10.158.12.45:5001/expert/labeling_ui:latest
        imagePullPolicy: Always
        resources: {}
      imagePullSecrets:
      - name: meinenghua
      nodeSelector: 
        node-tag: gpu-001
