reserved/pwc-ds-k8s-yaml-config-reserved/expert-config/labeling-ui/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-labeling-ui
  namespace: expert
spec:
  selector:
    app: deployment-labeling-ui
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
